src/objects/Contract_Term__c.object
<CustomObject>
    <description>Object supports individual contract terms tied to the contract necessary to flow to LS.</description>
    <fields>
        <fullName>Contract_Term_Value__c</fullName>
        <label>Contract Term Value</label>
        <precision>15</precision>
        <required>true</required>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Terms</relationshipLabel>
        <relationshipName>Contract_Terms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Term_Category__c</fullName>
        <label>Term Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Term_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AGGREGATEFRIENDS</fullName>
                </value>
                <value>
                    <fullName>AMRN_PASSTHRU_CAPACITY</fullName>
                </value>
                <value>
                    <fullName>BLOCK_INDEX</fullName>
                </value>
                <value>
                    <fullName>BUNDLED_ENERGY_DISTLOSS_CNSLT_FEE</fullName>
                </value>
                <value>
                    <fullName>CAP_CHARGE</fullName>
                </value>
                <value>
                    <fullName>CREATE_NEXT_BH</fullName>
                </value>
                <value>
                    <fullName>CUSTOMER_CHARGE</fullName>
                </value>
                <value>
                    <fullName>DIST_LOSS</fullName>
                </value>
                <value>
                    <fullName>DUEDATE</fullName>
                </value>
                <value>
                    <fullName>FIXED_BLOCK</fullName>
                </value>
                <value>
                    <fullName>GFEC_ENERGY</fullName>
                </value>
                <value>
                    <fullName>GFEC_MISO</fullName>
                </value>
                <value>
                    <fullName>GFEC_TRANSMISSION</fullName>
                </value>
                <value>
                    <fullName>GFECADMINACCT</fullName>
                </value>
                <value>
                    <fullName>GFECADMINKWH</fullName>
                </value>
                <value>
                    <fullName>IECADMINACCT</fullName>
                </value>
                <value>
                    <fullName>IECADMINKWH</fullName>
                </value>
                <value>
                    <fullName>IECAEMACCTFEE</fullName>
                </value>
                <value>
                    <fullName>IECAEMFEE</fullName>
                </value>
                <value>
                    <fullName>IECENERGY</fullName>
                </value>
                <value>
                    <fullName>IECFINALIZE</fullName>
                </value>
                <value>
                    <fullName>IECLATHAM</fullName>
                </value>
                <value>
                    <fullName>IECMISO</fullName>
                </value>
                <value>
                    <fullName>IECTRANSMISSION</fullName>
                </value>
                <value>
                    <fullName>Line_Loss</fullName>
                </value>
                <value>
                    <fullName>MAXKW</fullName>
                </value>
                <value>
                    <fullName>MAXKW_FRIEND</fullName>
                </value>
                <value>
                    <fullName>MAXKW_MASTER</fullName>
                </value>
                <value>
                    <fullName>MAXKWH</fullName>
                </value>
                <value>
                    <fullName>MINKWH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term_Start_Date__c</fullName>
        <label>Term Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Term_Stop_Date__c</fullName>
        <label>Term Stop Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Term_Type__c</fullName>
        <label>Term Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACCR_CNSLT_FEE</fullName>
                </value>
                <value>
                    <fullName>ADDER</fullName>
                </value>
                <value>
                    <fullName>ADMIN</fullName>
                </value>
                <value>
                    <fullName>ADVS_CNSLT_FEE</fullName>
                </value>
                <value>
                    <fullName>AEPL_CNSLT_FEE</fullName>
                </value>
                <value>
                    <fullName>AFGE_CNSLT_FEE</fullName>
                </value>
                <value>
                    <fullName>AGEE_CNSLT_FEE</fullName>
                </value>
                <value>
                    <fullName>AGRA_CNSLT_FEE</fullName>
                </value>
                <value>
                    <fullName>AIME_CNSLT_FEE</fullName>
                </value>
                <value>
                    <fullName>ALEL_CNSLT_FEE</fullName>
                </value>
                <value>
                    <fullName>ALES_CNSLT_FEE</fullName>
                </value>
                <value>
                    <fullName>ALFA_CNSLT_FEE</fullName>
                </value>
                <value>
                    <fullName>ALFE_CNSLT_FEE</fullName>
                </value>
                <value>
                    <fullName>ALPO_CNSLT_FEE</fullName>
                </value>
                <value>
                    <fullName>ALUT_CNSLT_FEE</fullName>
                </value>
                <value>
                    <fullName>AMES_CNSLT_FEE</fullName>
                </value>
                <value>
                    <fullName>AMEX_CNSLT_FEE</fullName>
                </value>
                <value>
                    <fullName>AMGY_CNSLT_FEE</fullName>
                </value>
                <value>
                    <fullName>AMRN_CAPACITY_PLC</fullName>
                </value>
                <value>
                    <fullName>ANCILLARY</fullName>
                </value>
                <value>
                    <fullName>APEX_CNSLT_FEE</fullName>
                </value>
                <value>
                    <fullName>APPI_CNSLT_FEE</fullName>
                </value>
                <value>
                    <fullName>ASPN_CNSLT_FEE</fullName>
                </value>
                <value>
                    <fullName>ASSE_CNSLT_FEE</fullName>
                </value>
                <value>
                    <fullName>AVEG_CNSLT_FEE</fullName>
                </value>
                <value>
                    <fullName>AVERAGE_DAILY_USAGE</fullName>
                </value>
                <value>
                    <fullName>BASIS</fullName>
                </value>
                <value>
                    <fullName>BCEN_CNSLT_FEE</fullName>
                </value>
                <value>
                    <fullName>BCME_CNSLT_FEE</fullName>
                </value>
                <value>
                    <fullName>BDES_CNSLT_FEE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_Num__c</fullName>
        <label>Value Num</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_String__c</fullName>
        <label>Value String</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Contract Term</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contract__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CT-{0000}</displayFormat>
        <label>Contract Term Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>